fix: fixes page shifting when scrollbar is present

--- a/example/sources/css/style.sass
+++ b/example/sources/css/style.sass
@@ -7,6 +7,10 @@ $text-color: hsl($random-hue+180, 30, 15%)
 $link-color: hsl($random-hue, 100, 20%)
 $header-link-color: hsl($random-hue+180, 100, 80%)
 
+html
+  padding-left: calc(100vw - 100%)
+
+
 body
   background: $body-color
   color: $text-color
